Fix alignment delete button

--- a/assets/base.css
+++ b/assets/base.css
@@ -1553,6 +1553,7 @@ input[type='checkbox'] {
 .quantity {
   border: 0.1rem solid rgba(var(--color-base-text), 0.08);
   position: relative;
+  height: 4.5rem;
   width: 14rem;
   display: flex;
 }
